--- a/explore-when.html
+++ b/explore-when.html
@@ -38,7 +38,7 @@
                     <div class="_159z8rr">
                       <div class="_fz3zdn"></div>
                       <div class="_1t78k44">
-                        <div class="display__flex dir dir-ltr">
+                        <div class="c1yo0219 dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
                             <div
                               data-plugin-in-point-id="EXPLORE_COMPACT_SEARCH_INPUT_FLOW"
@@ -2932,7 +2932,7 @@
                                                                     id="micro-flex-chips-DLS-chipGroup-label"
                                                                   >
                                                                     <span
-                                                                      class="text_highlight dir dir-ltr"
+                                                                      class="text-highlightdir dir-ltr"
                                                                       >Flexible
                                                                       dates</span
                                                                     >
@@ -3369,7 +3369,7 @@
                                                                   id="chip-group-super_flexible_lengths-DLS-chipGroup-label"
                                                                 >
                                                                   <span
-                                                                    class="text_highlight dir dir-ltr"
+                                                                    class="text-highlightdir dir-ltr"
                                                                     >How long
                                                                     would you
                                                                     like to
@@ -3488,7 +3488,7 @@
                                                                   id="chip-group-super_flexible_dates-DLS-chipGroup-label"
                                                                 >
                                                                   <span
-                                                                    class="text_highlight dir dir-ltr"
+                                                                    class="text-highlightdir dir-ltr"
                                                                     >When do you
                                                                     want to
                                                                     go?</span
