--- a/inbox.html
+++ b/inbox.html
@@ -3398,11 +3398,11 @@
         --g-lm-u-p: normal;
         --mq-yk-l: 0.04em;
       }
-      .display__flex[class][class]::before {
+      .c1yo0219[class][class]::before {
         display: flex;
         content: '';
       }
-      .display__flex[class][class]::after {
+      .c1yo0219[class][class]::after {
         display: flex;
         content: '';
       }
@@ -7232,19 +7232,19 @@
       .atm_1yfe54e_161hw1:disabled {
         color: var(--j-qkgmf);
       }
-      .display__flex[class][class]::before {
+      .c1yo0219[class][class]::before {
         display: flex;
         content: '';
       }
-      .display__flex[class][class]::after {
+      .c1yo0219[class][class]::after {
         display: flex;
         content: '';
       }
-      .display__flex[class][class]::before {
+      .c1yo0219[class][class]::before {
         display: flex;
         content: '';
       }
-      .display__flex[class][class]::after {
+      .c1yo0219[class][class]::after {
         display: flex;
         content: '';
       }
@@ -7285,7 +7285,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text_highlight dir dir-ltr"
+                          ><span class="text-highlightdir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -7876,7 +7876,7 @@
                                                   Booking completed
                                                 </div>
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Booking status is Booking
                                                   completed</span
                                                 >
@@ -7893,7 +7893,7 @@
                                                   Orange Battered Eggs
                                                 </div>
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Cooking Deep Fried Bright
                                                   Orange Battered Eggs</span
                                                 ></span
@@ -7911,7 +7911,7 @@
                                                   questions, plesae let me know.
                                                 </div>
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Message preview: You: Thanks
                                                   for attending! If you have any
                                                   follow up questions, plesae
@@ -7948,13 +7948,13 @@
                                                 <!-- -->Cooking Deep Fried
                                                 Bright Orange Battered Eggs
                                               </div>
-                                              <span class="text_highlight dir dir-ltr"
+                                              <span class="text-highlightdir dir-ltr"
                                                 >Jun 25, 2022 · Cooking Deep
                                                 Fried Bright Orange Battered
                                                 Eggs</span
                                               >
                                             </div>
-                                            <span class="text_highlight dir dir-ltr"
+                                            <span class="text-highlightdir dir-ltr"
                                               >Responded</span
                                             >
                                           </div></a
@@ -8025,7 +8025,7 @@
                                                   Booking completed
                                                 </div>
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Booking status is Booking
                                                   completed</span
                                                 >
@@ -8041,7 +8041,7 @@
                                                   Jesselle Papa
                                                 </div>
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Conversation with Jesselle
                                                   Papa</span
                                                 ></span
@@ -8058,7 +8058,7 @@
                                                   booking the experience.
                                                 </div>
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Message preview: You: Hello,
                                                   Thanks for booking the
                                                   experience.
@@ -8094,13 +8094,13 @@
                                                 <!-- -->Cooking Deep Fried
                                                 Bright Orange Battered Eggs
                                               </div>
-                                              <span class="text_highlight dir dir-ltr"
+                                              <span class="text-highlightdir dir-ltr"
                                                 >Jun 25, 2022 · Cooking Deep
                                                 Fried Bright Orange Battered
                                                 Eggs</span
                                               >
                                             </div>
-                                            <span class="text_highlight dir dir-ltr"
+                                            <span class="text-highlightdir dir-ltr"
                                               >Responded</span
                                             >
                                           </div></a
