--- a/submission/about.html
+++ b/submission/about.html
@@ -1230,7 +1230,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                               <div class="_pxnjg" id="about_host_input-help">
                                 <span aria-hidden="true">574/850</span
                                 ><span
-                                  class="text_highlight dir dir-ltr"
+                                  class="text-highlightdir dir-ltr"
                                   aria-atomic="true"
                                   aria-live="polite"
                                   >574 out of 850 characters used</span
