--- a/submission/title.html
+++ b/submission/title.html
@@ -1068,7 +1068,7 @@
                             </div>
                             <div class="_v08k6k">
                               <span
-                                class="text_highlight dir dir-ltr"
+                                class="text-highlightdir dir-ltr"
                                 id="title-textarea-label"
                                 >Let’s give your experience a name</span
                               >
@@ -1093,7 +1093,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                                 <div class="_1wmtabt">
                                   <span aria-hidden="true">48/60</span
                                   ><span
-                                    class="text_highlight dir dir-ltr"
+                                    class="text-highlightdir dir-ltr"
                                     aria-atomic="true"
                                     aria-live="polite"
                                     >48 out of 60 characters used</span
