--- a/calendar.html
+++ b/calendar.html
@@ -70,7 +70,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text_highlight dir dir-ltr"
+                          ><span class="text-highlightdir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
