--- a/login-security.html
+++ b/login-security.html
@@ -1079,7 +1079,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="display__flex dir dir-ltr"></div>
+                  <div class="c1yo0219 dir dir-ltr"></div>
                 </div>
                 <div class="t2pjd0h dir dir-ltr">
                   <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
@@ -1113,7 +1113,7 @@
                 <div class="page-shell-max-lg-plus">
                   <div class="page-shell">
                     <div class="_siy8gh">
-                      <div class="display__flex dir dir-ltr" style="">
+                      <div class="c1yo0219 dir dir-ltr" style="">
                         <header class="header">
                           <div class="header__container">
                             <div class="header__brand-wrapper">
@@ -2242,7 +2242,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="display__flex dir dir-ltr">
+                  <div class="c1yo0219 dir dir-ltr">
                     <footer role="contentinfo" class="footer">
                       <div class="footer__container">
                         <div class="footer__links-wrapper">
@@ -2405,7 +2405,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text_highlight dir dir-ltr"
+                          <span class="text-highlightdir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -2414,7 +2414,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -2439,7 +2439,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -2480,7 +2480,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -2505,7 +2505,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -2661,7 +2661,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -2686,7 +2686,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
