--- a/payment.html
+++ b/payment.html
@@ -49,7 +49,7 @@
                 <div class="page-shell-max-lg-plus">
                   <div class="page-shell">
                     <div class="_siy8gh">
-                      <div class="display__flex dir dir-ltr">
+                      <div class="c1yo0219 dir dir-ltr">
                         <div class="_88xxct">
                           <div class="_18nz6sk" role="banner">
                             <a
@@ -95,7 +95,7 @@
                             <div style="min-height: 100vh">
                               <div class="_88xxct">
                                 <div>
-                                  <div class="display__flex dir dir-ltr">
+                                  <div class="c1yo0219 dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
@@ -152,11 +152,11 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="display__flex dir dir-ltr">
+                                <div class="c1yo0219 dir dir-ltr">
                                   <div class="flex-row-full-width">
                                     <div class="_bdo76v7">
                                       <div style="margin-bottom: 64px">
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -173,7 +173,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -258,7 +258,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -285,7 +285,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -330,7 +330,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -382,7 +382,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -429,7 +429,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -443,7 +443,7 @@
                                               <fieldset class="_1rshn0">
                                                 <legend class="_1gyjybc">
                                                   <span
-                                                    class="text_highlight dir dir-ltr"
+                                                    class="text-highlightdir dir-ltr"
                                                     >Payment plan</span
                                                   >
                                                 </legend>
@@ -517,7 +517,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -657,7 +657,7 @@
                                                             </div>
                                                           </div>
                                                           <span
-                                                            class="text_highlight dir dir-ltr"
+                                                            class="text-highlightdir dir-ltr"
                                                             id="payment_option_selector_described_by"
                                                             >Select or add a new
                                                             payment method</span
@@ -802,7 +802,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -826,7 +826,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -884,7 +884,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -944,7 +944,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="display__flex dir dir-ltr">
+                                        <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -1023,7 +1023,7 @@
                                           class="_7efq7j"
                                           style="margin-bottom: 88px"
                                         >
-                                          <div class="display__flex dir dir-ltr">
+                                          <div class="c1yo0219 dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1086,7 +1086,7 @@
                                                           <span
                                                             class="_154iz1b2"
                                                             ><span
-                                                              class="text_highlight dir dir-ltr"
+                                                              class="text-highlightdir dir-ltr"
                                                               >Rating 5.0 out of
                                                               5; 70
                                                               reviews</span
@@ -1125,7 +1125,7 @@
                                                           <span
                                                             class="_154iz1b2"
                                                             ><span
-                                                              class="text_highlight dir dir-ltr"
+                                                              class="text-highlightdir dir-ltr"
                                                               >Rating 5.0 out of
                                                               5; 70
                                                               reviews</span
@@ -1192,7 +1192,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="display__flex dir dir-ltr">
+                                          <div class="c1yo0219 dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1233,7 +1233,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="display__flex dir dir-ltr">
+                                          <div class="c1yo0219 dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1273,7 +1273,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="display__flex dir dir-ltr">
+                                          <div class="c1yo0219 dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1372,11 +1372,11 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="display__flex dir dir-ltr">
+                            <div class="c1yo0219 dir dir-ltr">
                               <footer role="contentinfo" class="footer">
                                 <div class="footer__container">
                                   <div class="_157uib4">
-                                    <span class="text_highlight dir dir-ltr"
+                                    <span class="text-highlightdir dir-ltr"
                                       >Footer section</span
                                     >
                                     <section>
@@ -1389,7 +1389,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1418,7 +1418,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
@@ -1481,7 +1481,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1510,7 +1510,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
@@ -1697,7 +1697,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1726,7 +1726,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlightdir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
