--- a/specific_trip.html
+++ b/specific_trip.html
@@ -49,7 +49,7 @@
                 <div style="--page-shell-max-content-width: 1600px">
                   <div class="page-shell">
                     <div class="_siy8gh">
-                      <div class="display__flex dir dir-ltr" style="">
+                      <div class="c1yo0219 dir dir-ltr" style="">
                         <header class="header">
                           <div class="header__container">
                             <div class="header__brand-wrapper">
@@ -384,7 +384,7 @@
                                                                 "
                                                               >
                                                                 <span
-                                                                  class="text_highlight dir dir-ltr"
+                                                                  class="text-highlightdir dir-ltr"
                                                                   aria-live="assertive"
                                                                   >Your
                                                                   experience
@@ -5717,7 +5717,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="display__flex dir dir-ltr">
+                  <div class="c1yo0219 dir dir-ltr">
                     <footer role="contentinfo" class="footer">
                       <div class="footer__container">
                         <div class="footer__links-wrapper">
@@ -5880,7 +5880,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text_highlight dir dir-ltr"
+                          <span class="text-highlightdir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -5889,7 +5889,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -5914,7 +5914,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -5955,7 +5955,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -5980,7 +5980,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -6139,7 +6139,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -6164,7 +6164,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlightdir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
