--- a/inbox.html
+++ b/inbox.html
@@ -8948,7 +8948,7 @@
                                   <a
                                     target="_blank"
                                     href="/experiences/3745068"
-                                    class="explore__show-more-click"
+                                    class="explore-click"
                                     >View experience</a
                                   >
                                 </div>
