--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -520,7 +520,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/help/topic/1632"
-                                                    class="explore__show-more-click"
+                                                    class="explore-click"
                                                     >Terms apply</a
                                                   >
                                                 </div>
@@ -681,18 +681,18 @@
                                                 protected under our
                                                 <a
                                                   href="/terms"
-                                                  class="explore__show-more-click"
+                                                  class="explore-click"
                                                   >Terms of Service</a
                                                 >,
                                                 <a
                                                   href="/terms/payments_terms"
-                                                  class="explore__show-more-click"
+                                                  class="explore-click"
                                                   >Payments Terms of Service</a
                                                 >, cancellation, and other
                                                 safeguards.
                                                 <a
                                                   href="/help/topic/1121/payment-methods?q=payments"
-                                                  class="explore__show-more-click"
+                                                  class="explore-click"
                                                   >Learn more</a
                                                 >
                                               </div>
@@ -1268,7 +1268,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/help/topic/1632"
-                                                    class="explore__show-more-click"
+                                                    class="explore-click"
                                                     >Terms apply</a
                                                   >
                                                 </div>
@@ -1429,18 +1429,18 @@
                                                 protected under our
                                                 <a
                                                   href="/terms"
-                                                  class="explore__show-more-click"
+                                                  class="explore-click"
                                                   >Terms of Service</a
                                                 >,
                                                 <a
                                                   href="/terms/payments_terms"
-                                                  class="explore__show-more-click"
+                                                  class="explore-click"
                                                   >Payments Terms of Service</a
                                                 >, cancellation, and other
                                                 safeguards.
                                                 <a
                                                   href="/help/topic/1121/payment-methods?q=payments"
-                                                  class="explore__show-more-click"
+                                                  class="explore-click"
                                                   >Learn more</a
                                                 >
                                               </div>
