--- a/places.html
+++ b/places.html
@@ -16654,7 +16654,7 @@
                                           rel="noopener noreferrer"
                                           target="_blank"
                                           href="https://www.google.com/maps/search/?api=1&amp;query=Nobu%20Malibu%2C%2022706%20Pacific%20Coast%20Hwy%2C%20Malibu%2C%20CA&amp;query_place_id=ChIJewC2XzIe6IARgQhofffh6fE"
-                                          class="explore__show-more-click"
+                                          class="explore-click"
                                           >Get directions</a
                                         >
                                       </div>
