--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -1377,7 +1377,7 @@
                                         <a
                                           target="_blank"
                                           href="/terms/privacy_policy"
-                                          class="explore__show-more-click"
+                                          class="explore-click"
                                           >Privacy Policy</a
                                         >.</span
                                       >
