--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -282,7 +282,7 @@
                                       <span class="_czm8crp"
                                         ><a
                                           href="/users/settings"
-                                          class="explore__show-more-click"
+                                          class="explore-click"
                                           ><div class="_ba3mo2p">Manage</div></a
                                         ></span
                                       >
@@ -347,7 +347,7 @@
                                               <a
                                                 target="_blank"
                                                 href="/help/article/2799/airbnbs-offplatform-policy"
-                                                class="explore__show-more-click"
+                                                class="explore-click"
                                                 >Off-Platform Policy</a
                                               >.
                                             </div>
@@ -680,7 +680,7 @@
                                           <span class="_czm8crp"
                                             ><a
                                               href="/users/settings"
-                                              class="explore__show-more-click"
+                                              class="explore-click"
                                               ><div class="_ba3mo2p">
                                                 Manage
                                               </div></a
@@ -750,7 +750,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/help/article/2799/airbnbs-offplatform-policy"
-                                                    class="explore__show-more-click"
+                                                    class="explore-click"
                                                     >Off-Platform Policy</a
                                                   >.
                                                 </div>
