--- a/resolutions.html
+++ b/resolutions.html
@@ -66,7 +66,7 @@
                   </li>
                 </ol>
                 <span class="_2s36nz"
-                  ><a href="/resolutions" class="explore__show-more-click">Exit</a></span
+                  ><a href="/resolutions" class="explore-click">Exit</a></span
                 >
               </div>
               <div class="_ngr7rq" role="progressbar" aria-valuenow="20">
