--- a/signup_login.html
+++ b/signup_login.html
@@ -1233,7 +1233,7 @@
                                           <a
                                             target="_blank"
                                             href="/terms/privacy_policy?source=signup"
-                                            class="explore__show-more-click"
+                                            class="explore-click"
                                             >Privacy Policy</a
                                           ></span
                                         >
@@ -4284,7 +4284,7 @@
                                         <a
                                           target="_blank"
                                           href="/terms/privacy_policy?source=signup"
-                                          class="explore__show-more-click"
+                                          class="explore-click"
                                           >Privacy Policy</a
                                         ></span
                                       >
@@ -6995,13 +6995,13 @@
                                     <a
                                       data-testid="forgot-password-link"
                                       href="/forgot_password"
-                                      class="explore__show-more-click"
+                                      class="explore-click"
                                       >Forgot password?</a
                                     >
 
                                     <p>
                                       Not you?
-                                      <a class="explore__show-more-click"
+                                      <a class="explore-click"
                                         >Use another account</a
                                       >
                                     </p>
