--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1062,7 +1062,7 @@
                                       <a
                                         target="_blank"
                                         href="/help/article/1524"
-                                        class="explore__show-more-click"
+                                        class="explore-click"
                                         >Learn more</a
                                       ></span
                                     >
