--- a/submission/about.html
+++ b/submission/about.html
@@ -1190,13 +1190,13 @@
                                 <a
                                   target="_blank"
                                   href="/account-settings/personal-info"
-                                  class="explore__show-more-click"
+                                  class="explore-click"
                                   >Edit name</a
                                 ><b class="_1p4gkyc">•</b
                                 ><a
                                   target="_blank"
                                   href="/users/edit-photo"
-                                  class="explore__show-more-click"
+                                  class="explore-click"
                                   >Edit photo</a
                                 >
                               </div>
