--- a/account-settings.html
+++ b/account-settings.html
@@ -243,7 +243,7 @@
                                         <div class="_1v1onhz">
                                           <a
                                             href="/users/show/423517614"
-                                            class="explore__show-more-click"
+                                            class="explore-click"
                                             >Show profile</a
                                           >
                                         </div>
@@ -918,13 +918,13 @@
                                       <div class="_w688nhn">
                                         <ul class="_11hau3k">
                                           <li class="inline">
-                                            <a href="/help" class="explore__show-more-click"
+                                            <a href="/help" class="explore-click"
                                               >Help &amp; support</a
                                             >
                                           </li>
                                           <li class="inline">
                                             <span aria-hidden="true">·</span>
-                                            <a href="/terms" class="explore__show-more-click"
+                                            <a href="/terms" class="explore-click"
                                               >Terms of Service</a
                                             >
                                           </li>
@@ -932,7 +932,7 @@
                                             <span aria-hidden="true">·</span>
                                             <a
                                               href="/terms/privacy_policy"
-                                              class="explore__show-more-click"
+                                              class="explore-click"
                                               >Privacy Policy</a
                                             >
                                           </li>
@@ -1139,7 +1139,7 @@
                                   ><span
                                     >ramirezjoseangelo@gmail.com<!-- -->
                                     · </span
-                                  ><a href="/users/show" class="explore__show-more-click"
+                                  ><a href="/users/show" class="explore-click"
                                     >Go to profile</a
                                   >
                                 </div>
@@ -1485,7 +1485,7 @@
                                 </div>
                                 <a
                                   href="/account-delete/reasons"
-                                  class="explore__show-more-click"
+                                  class="explore-click"
                                   >Take care of that now</a
                                 >
                               </div>
