--- a/contact-host.html
+++ b/contact-host.html
@@ -1696,7 +1696,7 @@
                                               >
                                                 <a
                                                   href="/rooms/16354372?check_in=&amp;check_out=&amp;adults=1&amp;children=0&amp;infants=0"
-                                                  class="explore__show-more-click"
+                                                  class="explore-click"
                                                   ><div
                                                     class="c1hs0xn0 dir dir-ltr"
                                                   >
