--- a/specific_trip.html
+++ b/specific_trip.html
@@ -1254,7 +1254,7 @@
                                                         mobile app:
                                                         <a
                                                           href="https://www.airbnb.com/online_experiences/join/57429540?confirmation_code=TARYZPXS"
-                                                          class="explore__show-more-click"
+                                                          class="explore-click"
                                                           ><span
                                                             style="
                                                               word-break: break-word;
@@ -1631,7 +1631,7 @@
                                                         location="[object Object]"
                                                         match="[object Object]"
                                                         href="/users/show/25152659"
-                                                        class="explore__show-more-click"
+                                                        class="explore-click"
                                                         >Show more</a
                                                       >
                                                     </div>
