--- a/submission/video.html
+++ b/submission/video.html
@@ -1228,7 +1228,7 @@
                                   <a
                                     target="_blank"
                                     href="/resources/hosting-experiences/a/384"
-                                    class="explore__show-more-click"
+                                    class="explore-click"
                                     >How to create a great video submission</a
                                   >
                                 </div>
